<resources>
    <string name="app_name">Cooking</string>
    <string name="textButton">К РЕЦЕПТАМ</string>
    <string name="picture1">TODO</string>
    <string name="title_activity_second">SecondActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="TittleText">Мой рецепт</string>
    <string name="textView2">Нажмите, чтобы начать</string>
    <string name="tittleRecipe1">Борщ</string>
    <string name="buttonRecipe1">Подробнее</string>
    <string name="tittleRecipe2">Окрошка</string>
    <string name="tittleRecipe3">Пицца</string>
    <string name="tittleRecipe4">Смузи</string>
    <string name="tittleRecipe5">Торт</string>
    <string name="textTittleRecipes">Рецепты</string>
    <string name="time1">50 min</string>
    <string name="time2">45 min</string>
    <string name="time3">30 min</string>
    <string name="time4">8 min</string>
    <string name="time5">240 min</string>
    <string name="textRecipeBorch">Рецепт борща вкусно</string>
    <string name="textviewRecipeBorch">
        "Ингредиенты: \n\n"
        "Мясо для бульона - 400-450 грамм \n"
        "Картофель - 4 штуки \n"
        "Луковица - 1 штука \n"
        "Морковь - 1 штука \n"
        "Свекла - 3 штуки \n"
        "Капуста - 1/3-1/2 штуки \n"
        "Чеснок - 2-3 зубчиков \n"
        "Томатная паста - 2 ст. ложки \n"
        "Уксус - 1 ст. ложка \n"
        "Соль, перец, растительное масло (по вкусу) \n"
        "Вода - 3-4 литра \n"
        "Лавровый лист - 1 штука \n\n\n"
        "Шаг 1. Для начала необходимо сварить мясной бульон. Мясо вымойте, выложите в кастрюлю и залейте водой. Добавьте лавровый лист. После закипания уберите огонь до минимума и варите до мягкости мяса (время зависит от того, какое именно мясо вы выбрали). Аккуратно достаньте его из бульона после готовности.\n\n"
        "Шаг 2. Бульон при желании процедите. Подсолите по вкусу и выложите нарезанный кубиками картофель. Варите около 10-12 минут. \n\n"
        "Шаг 3. Лук с морковью очистите, измельчите и обжарьте на сковороде с небольшим количеством растительного масла. \n\n"
        "Шаг 4. В кастрюлю с бульоном выложите обжаренные овощи и мелко нашинкованную капусту. \n\n"
        "Шаг 5. На сковороду тем временем налейте еще немного масла и выложите тертую свеклу. Обжарьте пару минут и добавьте уксус. Тушите еще минут 5, а после выложите томатную пасту. Томите на медленном огне еще 5-7 минут.\n\n"
        "Шаг 6. В бульон выложите мясо, предварительно нарезав его порционными кусочками, и свеклу. \n\n"
        "Шаг 7. По вкусу добавьте соль, перец, сахар и чеснок. Варите еще минут 7-10 до готовности картофеля. После снимите с огня, накройте крышкой и оставьте на полчасика настояться. Перед подачей можно добавить зелень и сметану. Борщ готов! Приятного аппетита!\n"
    </string>
    <string name="textviewtitle">Борщ</string>
    <string name="textviewtitle2">Окрошка</string>
    <string name="textviewRecipeOkroshka">
        "Ингредиенты:\n\n"
        "Картофель - 2-4 штук (если большая -— 2)\n"
        "Огурцы свежие - 2-3 штук (среднего размера)\n"
        "Редиска - 150-200 грамм\n"
        "Яйца вареные - 3-4 штук\n"
        "Вареная колбаса - 250 грамм (или отварное постное мясо)\n"
        "Лук зеленый - 4-5 штук\n"
        "Зелень укропа, петрушки - 1 пучок\n"
        "Соль - 1 чайная ложка (по вкусу)\n"
        "Сметана - 100 грамм\n"
        "Квас - 1,5-2 литр\n\n\n"
        "1 шаг. Картофель для окрошки отварим в кожуре. Заодно сварим яйца. Остудим.\n"
        "2 шаг. Нарезаем зеленый лук.\n"
        "3 шаг. Добавим к нему соль. \n"
        "4 шаг. И тщательно разминаем, чтобы лук стал мягче и пустил сок. Можно добавить измельченную зелень и тоже помять. \n"
        "5 шаг. Огурцы натираем на крупной терке, так вкуснее, хотя можно нарезать их кубиками. Редис нарезаем, также можно натереть его на терке. Нарезаем кубиками вареную колбасу или мясо. Очистим и нарежем яйца. И нарезаем остывший и очищенный картофель. Ну, и зелень тоже нарежем. Все ингредиенты нарезаны и сложены в одну емкость. Тщательно перемешиваем. Раскладываем по тарелкам и заливаем квасом. Кому-то захочется больше кваса, кому-то — меньше, тут уже по желанию. Окрошка готова, можно дегустировать! :) \n\n"
    </string>
    <string name="textviewtitle3">Пицца</string>
    <string name="textviewRecipePizza">
        "Ингредиенты:\n\n"
        "Мука - 330 грамм\n"
        "Молоко - 200 миллилитров (теплое)\n"
        "Дрожжи - 7 грамм (быстрорастворимые)\n"
        "Масло оливковое - 2 ст. ложки\n"
        "Сахар - 2 чайных ложки\n"
        "Соль - 1/2 чайных ложки\n"
        "Грибы - 250 грамм (шампиньоны)\n"
        "Мускатный орех - 1 чайная ложка\n"
        "Масло - 1 ст. ложка (растительное)\n"
        "Куриная грудка - 2 штуки (отварная)\n"
        "Помидор - 4-5 штук\n"
        "Сыр - 200 грамм\n"
        "Маслины - 1/2 штуки (банка)\n"
        "Соль (по вкусу)\n"
        "Томатный соус - 250 грамм\n\n\n"
        "1 шаг. В теплом молоке растворите дрожжи и сахар. Поставьте в теплое место на 10 минут. Муку и соль просейте в глубокую миску.\n"
        "2 шаг. В муку добавьте подошедшие дрожжи и оливковое масло. Замесите гладкое тесто, в течение 5 минут. Соберите тесто в шар, поместите его в миску, смазанную растительным маслом, накройте и поставьте для подъема в теплое место на 30 минут.\n"
        "3 шаг. Пока поднимается тесто, подготовьте продукты для начинки. Помидоры и грибы вымойте, обсушите. Твердый сыр натрите на мелкой терке. \n"
        "4 шаг. Грибы нарежьте тонкими ломтиками. Обжарьте их на разогретом растительном масле в течение 3-4 минут, с добавлением мускатного ореха и щепоткой соли. Грибы должны остаться сочными. \n"
        "5 шаг. Маслины нарежьте колечками. Сметану смешайте с аджикой. Куриное мясо измельчите. Помидоры нарежьте тонкими колечками перед самой выкладкой начинки. \n"
        "6 шаг. Духовку включите разогреваться на 250 °C. Подошедшее тесто обомните и разделите на 2 части. Раскатайте 1 часть в очень тонкий пласт: по желанию круглый или прямоугольный. Поместите его на противень с силиконовым ковриком или смазанным растительным маслом. Используйте половину продуктов для начинки. Смажьте лепешку теста томатно-сметанным соусом. Разместите по всей поверхности жаренные грибы. Сверху — измельченное куриное мясо, ломтики помидоров и колечки маслин. \n"
        "7 шаг. Посыпте сверху сыром и поставьте пиццу в разогретую духовку запекаться на 15-20 минут. Ориентируйтесь по своей духовке. Пока одна пицца запекается, приготовьте вторую. Готовую пиццу переместите на деревянную доску. Разрежьте с помощью специального ножа или ножниц. И наслаждайтесь! \n\n"
    </string>
    <string name="textviewtitle4">Смузи</string>
    <string name="textviewRecipeMix">
        "Ингредиенты:\n\n"
        "Черная смородина 50 Грамм (замороженная)\n"
        "Красная смородина 50 Грамм (замороженная)\n"
        "Сахар или сахарная пудра 2 Чайных ложки\n"
        "Молоко 170 Миллилитров\n\n\n"
        "1 шаг. Приготовим продукты. Ягоды в подготовке предварительной не нуждаются, они были вымыты перед закладкой в морозилку. Молоко понадобится комнатной температуры.\n"
        "2 шаг. В чашу блендера складываем ягоды и пудру.\n"
        "3 шаг. Измельчаем в пюре. \n"
        "4 шаг. Вливаем молоко и продолжаем смешивание в блендере.\n"
        "5 шаг. Густой и ароматный смузи из замороженных ягод готов! Приятного аппетита!\n"
    </string>
    <string name="textviewtitle5">Торт</string>
    <string name="textviewRecipeCake">
        "Ингредиенты:\n\n"
        "Яйца - 3 штуки\n"
        "Сахар - 1 стакан (180 грамм)\n"
        "Сгущенное молоко - 150 грамм\n"
        "Сметана 20% - 1 стакан (200 грамм)\n"
        "Мука - 1,5 стакана (195 грамм)\n"
        "Какао - 3 ст. ложки\n"
        "Сода - 1 чайная ложка\n"
        "Уксус 9% - 2 чайных ложки\n"
        "Масло - 400 грамм (в крем)\n"
        "Сгущенное молоко - 150 грамм (в крем)\n"
        "Какао - 2 ст. ложки (в крем)\n"
        "Коньяк - 1 стакан (для пропитки)\n"
        "Сахар - 1 стакан (для пропитки)\n"
        "Какао - 150 грамм (для помадки)\n"
        "Сахар - 50 грамм (для помадки)\n"
        "Масло - 30 грамм (для помадки)\n"
        "Молоко - 400-500 миллилитров\n\n\n"
        "1 шаг. Готовим бисквит. 3 яйца комнатной температуры взбейте до появления пены, потом несколькими приемами введите сахар. В полученную массу отправьте жирную сметану и 150 грамм сгущенки, перемешайте миксером на небольшой скорости.\n"
        "2 шаг. Заранее 2-3 раза просейте муку, затем добавьте ее вместе с какао в смесь. На медленной скорости мешайте миксером.\n"
        "3 шаг. Чайную ложку соды погасите 9%-ным уксусом и добавьте в миску со всеми ингредиентами на том этапе, когда еще не вся мука вмешалась в тесто. Тесто перемешайте миксером до однородного состояния.\n"
        "4 шаг. Разогрейте духовку до 180 градусов. Форму для выпечки застелите пергаментной бумагой (или смажьте ее дно подсолнечным маслом). Вылейте тесто в форму, сразу отправьте его в духовку. Выпекается бисквит 25-35 минут, поэтому проверяйте его готовность зубочисткой. Готовый корж должен остыть и в идеале выстояться 10-12 часов.\n"
        "5 шаг. Для приготовления пропитки вылейте коньяк в кастрюлю с толстым дном, добавьте сахар. Пропорции коньяка и сахара должны быть 1:1. Растворите сахар, кипятите на небольшом огне минут 20-30, чтобы испарился алкоголь и пропитка немного загустела. Потом оставьте пропитку до полного остывания.\n"
        "6 шаг. Для приготовления крема сливочному маслу нужно дать нагреться, чтобы оно стало мягким. Взбейте его миксером, чтобы оно насытилось кислородом и посветлело. Добавьте эссенцию ванили и коньяка, 150 грамм сгущенки и взбейте всё миксером (2-3 минуты). Затем просейте 2 столовые ложки какао и завершите взбивать крем.\n"
        "7 шаг. Для приготовления шоколадной помадки кастрюлю с небольшим количеством воды поставьте на огонь, а сверху — вторую кастрюлю, которая не будет касаться дном воды. Просейте в нее какао, добавьте сахар и перемешайте. Порциями вливайте молоко, венчиком вмешивая его в какао. Когда молоко полностью впитается в какао, пусть помадка варится на среднем огне. Ваша цель — получить однородную консистенцию с гладкой структурой. В конце готовки добавьте для глянца столовую ложку сливочного масла.\n"
        "8 шаг. Верхушку бисквита (особенно, если она лопнула) нужно срезать. Весь корж разрежьте на 3 части. Для этого ножом сделайте на боках по кругу горизонтальные надрезы, а потом заведите туда нитку и потяните ее на себя. Коньячной пропиткой полностью пропитайте все коржи. Верхнюю часть смажьте пропиткой снизу, чтобы было сочнее.\n"
        "9 шаг. Распределите крем по коржам, не доводя его до самого края. Когда соберете весь торт, прижмите его сверху дощечкой. Торт выровняется, а крем распределится равномерно до краев.\n"
        "10 шаг. Бока торта тоже смажьте кремом, заполните пустоты между коржами. Оставшийся коньячный сироп распределите по всему торту при помощи силиконовой кисточки. После этого торту надо постоять в холодильнике 1-2 часа.\n"
        "11 шаг. Перенесите торт на решетку, полейте его шоколадной глазурью. Если нужно, заранее подогрейте глазурь, чтобы та равномерно растекалась по торту. Пусть торт стоит на решетке, пока не стечет лишняя глазурь и десерт не застынет.\n"
    </string>
    <string name="buttonBack">Назад</string>
    <string name="backbutton">Назад</string>
</resources>