<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/second"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fonwhite"
    android:backgroundTint="#F6E2E2"
    tools:context=".DatalogActivity"
    tools:ignore="SpeakableTextPresentCheck">

    <Button
        android:id="@+id/buttonRecipe1"
        android:layout_width="126dp"
        android:layout_height="38dp"
        android:backgroundTint="#61AA0D"
        android:onClick="onClickGoSecond1"
        android:text="@string/buttonRecipe1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.165"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/imageRecipe1"
        android:layout_width="157dp"
        android:layout_height="119dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092"
        app:srcCompat="@drawable/borsch"
        tools:ignore="ContentDescription,DuplicateIds,HardcodedText" />

    <TextView
        android:id="@+id/textTittle1"
        android:layout_width="101dp"
        android:layout_height="29dp"
        android:background="#ECE4E4"
        android:backgroundTint="#ECE1E1"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/tittleRecipe1"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.732"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/buttonRecipe2"
        android:layout_width="126dp"
        android:layout_height="38dp"
        android:backgroundTint="#61AA0D"
        android:onClick="onClickGoSecond5"
        android:text="@string/buttonRecipe1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.893"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/imageRecipe2"
        android:layout_width="157dp"
        android:layout_height="119dp"
        android:backgroundTint="#F4E8E8"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289"
        app:srcCompat="@drawable/ocroshka"
        tools:ignore="ContentDescription,HardcodedText" />

    <TextView
        android:id="@+id/textTittle2"
        android:layout_width="101dp"
        android:layout_height="29dp"
        android:background="#ECE4E4"
        android:backgroundTint="#ECE1E1"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/tittleRecipe5"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.732"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.804"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/buttonRecipe3"
        android:layout_width="126dp"
        android:layout_height="38dp"
        android:backgroundTint="#61AA0D"
        android:onClick="onClickGoSecond4"
        android:text="@string/buttonRecipe1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.695"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/imageRecipe3"
        android:layout_width="157dp"
        android:layout_height="119dp"
        android:background="#F6F4F4"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483"
        app:srcCompat="@drawable/pizza"
        tools:ignore="ContentDescription,HardcodedText" />

    <TextView
        android:id="@+id/textTittle3"
        android:layout_width="101dp"
        android:layout_height="29dp"
        android:background="#ECE4E4"
        android:backgroundTint="#ECE1E1"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/tittleRecipe4"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.732"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.603"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/buttonRecipe4"
        android:layout_width="126dp"
        android:layout_height="38dp"
        android:backgroundTint="#61AA0D"
        android:onClick="onClickGoSecond3"
        android:text="@string/buttonRecipe1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/imageRecipe4"
        android:layout_width="157dp"
        android:layout_height="119dp"
        android:background="#FFFFFF"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.692"
        app:srcCompat="@drawable/mix"
        tools:ignore="ContentDescription,HardcodedText" />

    <TextView
        android:id="@+id/textTittle4"
        android:layout_width="101dp"
        android:layout_height="29dp"
        android:background="#ECE4E4"
        android:backgroundTint="#ECE1E1"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/tittleRecipe3"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.732"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/buttonRecipe5"
        android:layout_width="126dp"
        android:layout_height="38dp"
        android:backgroundTint="#61AA0D"
        android:onClick="onClickGoSecond2"
        android:text="@string/buttonRecipe1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/imageRecipe5"
        android:layout_width="157dp"
        android:layout_height="119dp"
        android:background="#F6F5F5"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.905"
        app:srcCompat="@drawable/cake"
        tools:ignore="ContentDescription,HardcodedText" />

    <TextView
        android:id="@+id/textTittle5"
        android:layout_width="101dp"
        android:layout_height="29dp"
        android:background="#ECE4E4"
        android:backgroundTint="#ECE1E1"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/tittleRecipe2"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.732"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textTittleRecipes"
        android:layout_width="161dp"
        android:layout_height="43dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/textTittleRecipes"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time1"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.961"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time5"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.806"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time4"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="@+id/imageRecipe3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.607"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time3"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.961"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.445"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time2"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.964"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="97dp"
        android:layout_height="40dp"
        android:backgroundTint="#F6C7C7"
        android:onClick="onClickGoSecond6"
        android:text="@string/buttonBack"
        android:textColor="#090808"
        android:textColorHighlight="#F5C6C6"
        android:textColorLink="#F5C6C6"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>